<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" >


        <item
            android:id="@+id/inicio2"
            android:icon="@drawable/home"
            android:title="inicio" />

        <item
            android:id="@+id/calculadora_MRU"
            android:icon="@drawable/car"
            android:title="@string/MRU" />

        <item
            android:id="@+id/calculadora_MRUA"
            android:icon="@drawable/speedometer"
            android:title="@string/MRUA" />

        <item
            android:id="@+id/calculadora_MCU"
            android:icon="@drawable/mcu_fan"
            android:title="@string/MCU" />

        <item
            android:id="@+id/calculadora_MCUA"
            android:icon="@drawable/mcua_fan"
            android:title="@string/MCUA" />
        <item
            android:id="@+id/caida_libre2"
            android:icon="@drawable/caidalibre"
            android:title="@string/CL" />

        <item
            android:id="@+id/calculadora_tiro_vertical"
            android:icon="@drawable/tiro_vertical_ico"
            android:title="@string/tiro_vertical" />

        <item
            android:id="@+id/calculadora_MPCL"
            android:icon="@drawable/mpcl_ico"
            android:title="@string/MPCL" />
    </group>
</menu>