<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.calculadorasdefisica.calculadoradecinematica.Calculadora_MRU"
    tools:ignore="UselessParent"
    android:background="#f6f6f6">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:inputType="textMultiLine"
                android:text="@string/cuerpo1_mcua"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="229dp"
                android:src="@drawable/angulares_mcua" />

            <TextView
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:text="@string/title2_mcua"
                android:textSize="18sp" />

            <TextView
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="20dp"
                android:inputType="textMultiLine"
                android:text="@string/cuerpo2_mcua"

                android:textSize="15sp" />

            <TextView
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:text="@string/title3_mcua"
                android:textSize="18sp" />

            <TextView
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="20dp"
                android:inputType="textMultiLine"
                android:text="@string/cuerpo3_mcua"

                android:textSize="15sp" />

            <TextView
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:text="@string/title2_mcua"

                android:textSize="18sp" />

            <ImageView
                style="@style/text"
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="229dp"
                android:src="@drawable/tangencial_mcua" />

            <TextView
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="20dp"
                android:inputType="textMultiLine"
                android:text="@string/cuerpo4_mcua"
                android:textSize="15sp" />

            <TextView
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:text="@string/title3_mcua"
                android:textSize="18sp" />

            <TextView
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="20dp"
                android:inputType="textMultiLine"
                android:text="@string/cuerpo5_mcua"
                android:textSize="15sp" />


        </LinearLayout>
    </ScrollView>


</RelativeLayout>